k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    name: backstage
    purpose: backstage-platform
