k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-ulp-service
  namespace: backstage
  labels:
    app: backstage-ulp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  - port: 7007
    targetPort: 7007
    protocol: TCP
    name: backend
  selector:
    app: backstage-ulp
